style: use fix position to keep the header fixed
- Use z-index to ensure that animations appear under the header

--- a/src/components/layout/header/header.module.css
+++ b/src/components/layout/header/header.module.css
@@ -8,6 +8,9 @@
   display: flex;
   justify-content: center;
   padding-top: 12px;
+  position: fixed;
+  top: 0;
+  z-index: 100;
 }
 .navContentWrapper {
   width: 95%;
@@ -59,7 +62,6 @@
 }
 
 .dropdownMenu {
-  color: red;
   min-width: 24px;
 }
 @media (min-width: 1024px) {
